Fixed z-index issue in webkit nightlys

--- a/css/style.css
+++ b/css/style.css
@@ -411,6 +411,7 @@ section{
 /* .col (extends div)*/
 .col{
 	position: absolute;
+	-webkit-transform:translate3d(0,0,0) rotate(0) scale(1);
 	width: 100%;
 	height: 100%;
 	z-index: 9;
